# haskell-lab

./: .editorconfig  .gitignore
conduit-exercises/: README.md  conduit-exercises.cabal
conduit-exercises/src/: Main.hs
lab1/: abs.hs  clip.hs  fib1.hs  funMax.hs  sinTaylor.hs  xyzzy.hs
lab2/: bst.hs  expression.hs  factorial.hs  lab2.hs  sorted-list.hs
lab3/: lab3.hs  lists.hs  powers.hs  typeclass.hs
lab4/: Lab41.hs  Lab42.hs  Lab43.hs
lab5/: checkword  checkword.hs  io-monad  io-monad.hs  lab5.hs  multiple-monads  multiple-monads.hs
lab5/exercises/: 1-maybe-functions.hs  2-calculator.hs  3-grep.hs  4-wc.hs  5-better-grep.hs  6-line-count.hs  7-sorting.hs
lab6/: graph-coloring.hs
lab6/exercises/: task3.hs
lab6/phonebook/: list.txt  phonebook.cabal
lab6/phonebook/src/: Main.hs
lab6/tasklist/: tasklist.cabal
lab6/tasklist/src/: Main.hs
lab6/zipcat/: README.md  zipcat.cabal
lab6/zipcat/src/: Main.hs
lab7/: const-monad.hs  csv-parser.hs  json-parser.hs  nope-monad.hs  parser.hs  value-monad.hs
lab8/: Lab81.hs  Lab82.hs  Lab83.hs  Lab84.hs
lab8/select-bytes/: README.md  select-bytes.cabal
lab8/troll/: troll.cabal
lab8/troll/src/: Main.hs
learn-you-a-haskell/: 11-functors-applicative-functors-and-monoids.hs  12-a-fistful-of-monads.hs  13-for-a-few-monads-more.hs
tic-tac-toe/: tic-tac-toe.cabal
tic-tac-toe/src/: Main.hs
typeclassopedia/: applicative.hs  monad.hs
